# rover_BEVs

./: README.md
aion_control/: CMakeLists.txt  package.xml
aion_control/config/: apm_config.yaml  apm_config_odom.yaml  apm_config_tune.yaml  apm_pluginlists.yaml  apm_pluginlists_odom.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
aion_control/launch/: _aion_io.launch  _aion_io_indoor.launch  aion_io.launch  aion_io_withoutZED.launch  b_site.launch  move_base.launch  multi_master.launch  navigation.launch  path_planner_tuning.launch  play_rosbag.launch  rosbag.launch  rviz_gcs.launch  simple_rosbag.launch  ugv_mavros_io.launch
aion_control/maps/: b_site.yaml  map.pgm  map.yaml  map_a_w40m_h40m.yaml  map_site_b.yaml
aion_descriptions/aion_r1_description/: CMakeLists.txt
aion_descriptions/aion_r1_description/launch/: display.launch
aion_descriptions/aion_r1_description/urdf/: r1_display.urdf.xacro  r1_sim.urdf.xacro  r1_without_ZED.urdf.xacro
aion_simulator/aion_r1_gazebo/: CMakeLists.txt  package.xml
