<?xml version="1.0"?>
<package format="2">
  <name>aion_control</name>
  <version>1.0.0</version>
  <description>AION Basic Control Package</description>
  <maintainer email="jaimem@aionrobotics.com">Jaime Machuca</maintainer>
  <license>GPLv3</license>
  <url type="website">http://aionrobotics.com</url>
  <author email="jaime@aionrobotics.com">Jaime Machuca</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>teleop_twist_joy</build_depend>
  <build_depend>robot_pose_publisher</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>teleop_twist_joy</build_export_depend>
  <build_export_depend>robot_pose_publisher</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>robot_pose_publisher</exec_depend>
  <exec_depend>tf</exec_depend>
  
  <export></export>
</package>
